force-app/main/default/objects/cdcpc__RD_Pricing_GraphiteLotCharge__c/cdcpc__RD_Pricing_GraphiteLotCharge__c.object-meta.xml
<CustomObject>
    <label>RDPricing GraphiteLotCharge</label>
    <nameField>
        <label>RDPricing GraphiteLotCharge</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricing GraphiteLotCharge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>