force-app/main/default/objects/cdcpc__RD_Pricing_GraphiteLotCharge__c/fields/cdcpc__TempUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TempUL__c</fullName>
    <label>TempUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>