force-app/main/default/objects/cdcpc__RD_Pricing_GraphiteLotCharge__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__LotCharge__c</columns>
    <columns>cdcpc__PressLL__c</columns>
    <columns>cdcpc__PressUL__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>